update dependencies to build flatpak in CI

--- a/.github/workflows/flatpak-build.yml
+++ b/.github/workflows/flatpak-build.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-24.04-arm
     steps:
       - uses: actions/checkout@v4
+      - name: Install xvfb and subversion
+        run: sudo apt-get update && sudo apt-get install -y xvfb subversion
       - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
           bundle: nz.mega.MEGAsync.aarch64.flatpak
