--- a/.github/workflows/flatpak-build.yml
+++ b/.github/workflows/flatpak-build.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install xvfb and subversion
-        run: sudo apt-get update && sudo apt-get install -y xvfb subversion
+        run: apt-get update && apt-get install -y xvfb subversion
       - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
           bundle: nz.mega.MEGAsync.aarch64.flatpak
