--- a/nz.mega.MEGAsync.yml
+++ b/nz.mega.MEGAsync.yml
@@ -37,8 +37,9 @@ modules:
       env:
         DESKTOP_DESTDIR: /app
       cxxflags: -Wno-dev
-      build-commands:
-        - dnf install -y xorg-x11-server-Xvfb
+      # Add build-deps (without it GitHub actions will fail)
+      build-deps:
+        - xorg-x11-server-Xvfb
     config_opts:
       -  -DCMAKE_BUILD_TYPE:STRING='None'
       -  -DCMAKE_MODULE_PATH:PATH="src/MEGASync/mega/contrib/cmake/modules/packages"
